--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ script:
         port: ${PORT}
         user: root
         password: root
+        host-key-check: false
   EOF
 - echo 'Validate with user Boltdir'
 - wash validate ./bolt
@@ -40,6 +41,7 @@ script:
         port: ${PORT}
         user: root
         password: root
+        host-key-check: false
   EOF
 - echo 'Validate with local Boltdir'
 - |
