Ensure boltdir config is used
Wash looks for config related to the plugin. When running the plugin
directly as a script, config is ignored.

Signed-off-by: Michael Smith <michael.smith@puppet.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,12 @@ script:
         host-key-check: false
   EOF
 - echo 'Validate with local Boltdir'
+- CWD=$(pwd)
 - |
   cat << EOF > wash.yaml
+  external-plugins:
+  - script: ${CWD}/bolt
   bolt:
-    dir: $(pwd)
+    dir: ${CWD}
   EOF
-- wash validate ./bolt --config-file wash.yaml
+- wash validate bolt --config-file wash.yaml
