Use Dockerfile with locale to avoid Travis CI error
Getting
```
Unexpected error output on Exec: bash: warning: setlocale: LC_ALL: cannot change locale (en_US.UTF-8)
```

This appears to have been addressed previously with Bolt. Using the Bolt
spec/Dockerfile to address this issue. Also plan to use the extra users
for future tests.

Signed-off-by: Michael Smith <michael.smith@puppet.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ env:
   - WASH_VERSION=0.19.0
 before_script:
 - curl -sfL https://github.com/puppetlabs/wash/releases/download/${WASH_VERSION}/wash-${WASH_VERSION}-x86_64-unknown-linux.tgz | tar -xzC ~/bin
-- docker run -d -p 22 --name test_sshd rastasheep/ubuntu-sshd:16.04
+# Run a custom Dockerfile with locale and several users for testing
+- docker build spec -t sshd
+- docker run -d -p 22 --name test_sshd sshd
 script:
 - PORT=$(docker port test_sshd 22 | cut -f2 -d:)
 - echo 'Building user Bolt v1 inventory'
