Add Docker transport
This works differently than the Bolt plugin, and if you're trying to
operate on Bolt targets that use Docker the added switch to find it in
the Docker plugin would be irritating.

Signed-off-by: Michael Smith <michael.smith@puppet.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,3 +55,13 @@ script:
     dir: ${CWD}
   EOF
 - wash validate bolt --config-file wash.yaml
+  # Test Docker transport
+- |
+  cat << EOF > inventory.yaml
+  version: 2
+  targets:
+  - uri: test_sshd
+    config:
+      transport: docker
+  EOF
+- wash validate bolt --config-file wash.yaml
